# data_migration_agent

./: .gitignore  CODEBASE_AUDIT.md  DEMO_GUIDE.md  FIX_MEMORY_MANAGER.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_OLD.md  LIVE_FEATURES.md  LLM_JSON_FIX.md  QUICK_START.md  README.md  SIDEBAR_UPDATE.md  SIGNALS_FIX.md
backend/: DATABASE.md  INTEGRATION_STATUS.md  LLM_INTEGRATION.md  LLM_TROUBLESHOOTING.md  docker-compose.yml  dry_run.py  dry_run_enhanced.py  dry_run_llm.py  main.py  pyproject.toml  reset_database.py  run_backend.py  run_full_demo.py  scheduler.py  test_email_integration.py  test_gemini_json.py  test_gemini_ready.py  test_models.py  view_incidents.py
backend/agents/: __init__.py  action_agent.py  decision_agent.py  observer_agent.py  reasoning_agent.py
backend/api/: main.py  schemas.py
backend/api/routes/: __init__.py  actions.py  agent.py  incidents.py  logs.py  migration.py  signals.py
backend/config/: __init__.py  agent_policies.yaml  settings.yaml  thresholds.yaml
backend/jobs/: __init__.py  detect_incidents.py
backend/memory/: agent_state.sqlite  event_store.py  init_db.py  memory_manager.py
backend/orchestrator/: __init__.py  agent_orchestrator.py
backend/simulations/: api_errors.json  api_errors_enhanced.json  migration_states.json  tickets.json  webhook_failures.json
backend/tools/: __init__.py  doc_tool.py  escalation_tool.py  llm_client.py  log_tool.py  retrieval.py  ticket_tool.py
backend/utils/: __init__.py  clustering.py  event_schema.py  logger.py
frontend/: package-lock.json  (+1 more)
(+53 files in other folders)
